# movie_publisher

./: CMakeLists.txt  README.md  package.xml
launch/: picture_pub.launch
src/: movie_publisher.cpp  picture_publisher.cpp  webcam_publisher.cpp
